--- a/app/src/app/roles/guest/signup/signup.page.scss
+++ b/app/src/app/roles/guest/signup/signup.page.scss
@@ -84,16 +84,6 @@ ion-content{
         font-size: 0.7em;
     }
 }
-.errors {
-    font-size: small;
-    color: var(--ion-color-danger);
-    // background: var(--ion-color-danger);
-    padding-left: 15px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    z-index: 1;
-    position: relative;
-  }
 
   ion-loading.loading {
     --background: #e3edff;
@@ -119,4 +109,22 @@ ion-content{
     font-size: 15px;
   }
 
+  .errors {
+    font-size: small;
+    color: var(--ion-color-danger);
+    margin: 0;
+    padding: 0;
+    z-index: 1;
+    position: relative;
+    margin-left: 15px;
+}
+
+.item-has-focus{
+    border: 1px solid var(--ion-color-color1);
+    border-radius: 15px;
+}
+
+.custom{
+--placeholder-opacity: .2;
+}
 
