--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -19,7 +19,7 @@
         <div class="container">
   
               <!-- Logo -->
-              <a class="logo" href="#" data-scroll-nav="0">
+              <a class="logo" href="http://reedapp.xyz">
                   <img src="../../../../assets/logo.png" alt="logo">          
               </a>
   
