--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -57,7 +57,7 @@
                 <div class="feat-item col-lg-4">
                     <div class="text-center">
                         <span class="icon icon-basic-cards-diamonds"></span>
-                        <h5>Convient</h5>
+                        <h5>Convenient</h5>
                         <h6>All inclusive</h6>
                         <p>Available on both Android and iOS mobile devices, making the referral process literally just a swipe away.</p>
                     </div>
