--- a/frontend/src/app/verifyaccount/verifyaccount.component.html
+++ b/frontend/src/app/verifyaccount/verifyaccount.component.html
@@ -2,7 +2,7 @@
 
     <div class="container">
         <div class="text-center caption mt-30">
-            <h4>Reef Med</h4>
+            <h4>Reef App</h4>
             <h1>Account Verification</h1>
             <div class="row">
                 <div class="offset-md-1 col-md-10 offset-lg-2 col-lg-8">
