--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -19,8 +19,8 @@
         <div class="container">
   
               <!-- Logo -->
-              <a class="logo" href="http://reedapp.xyz">
-                  <img src="../../../../assets/logo.png" alt="logo">          
+              <a class="logo" href="http://reefapp.xyz">
+                  <img src="../../../../assets/logo.png" alt="logo">
               </a>
   
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -175,7 +175,10 @@
                    <a href="#0"><i class="fab fa-pinterest-p"></i></a>
                </div>
 
-               <p><a target="_blank" href="https://owlblack.com">OwlBlack Tech</a></p>
+               <p><a target="_blank" href="https://owlblack.com">OwlBlack Tech</a> 
+             <br>
+            &copy; 2023
+            </p>
            </div>
 
        </footer>
