--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -9,9 +9,20 @@
                     <p>Get your patients the care they need, when they need it. Try our app today!</p>
                 </div>
             </div>
-            <a href="#" data-scroll-nav="1" class="butn butn-light mt-30">
-                <span>Download from Playstore</span>
-            </a>
+            <div id="downloads">
+                <p>DOWNLOAD NOW</p>
+                <a href="#" data-scroll-nav="1" class="butn butn-light mt-10">
+                    <span>Playstore</span>
+                </a>
+                <a href="#" data-scroll-nav="1" class="butn butn-light mt-10">
+                    <span>APK</span>
+                </a>
+                <a href="#" data-scroll-nav="1" class="butn butn-light mt-10">
+                    <span>Appstore</span>
+                </a>
+            </div>
+                    
+
             <!-- <a href="#" data-scroll-nav="1" class="butn butn-light mt-30">
                 <span>Get Started</span>
             </a> -->
@@ -33,14 +44,14 @@
             <div class="row">
                 <div class="offset-lg-2 col-lg-8 offset-md-1 col-md-10 text-center mb-80">
                     <h4 class="extra-title">About <span>Reef</span> App</h4>
-                    <p>Reef app is yet another offering from OwlBlack Tech that promises to give healthcare professionals and members of the public a way to refer patients to the best medical facilities while being compensated for doing so.</p>
+                    <p>Reef app is yet another offering from OwlBlack Tech that promises to give healthcare professionals a way to refer patients in need of Scans, X-Rays, CT, Biopsy and Lab procedures to the best facilities who provide the required procedure while being paid for doing so.</p>
                 </div>
 
                 <div class="feat-item mb-md50 col-lg-4">
                     <div class="text-center">
                         <span class="icon icon-basic-anchor"></span>
                         <h5>Reliable</h5>
-                        <h6>Absolude dependabilty</h6>
+                        <h6>Absolute Dependabilty</h6>
                         <p>The Reef app prioritizes the maintainance of a stable system for its clients and users.</p>
                     </div>
                 </div>
@@ -49,8 +60,8 @@
                     <div class="text-center">
                         <span class="icon icon-basic-lock"></span>
                         <h5>Secure</h5>
-                        <h6>Closely monitored</h6>
-                        <p>Reef app realises the need to store reports from the incorrect hands to ensure patient convenience.</p>
+                        <h6>Closely Monitored</h6>
+                        <p>We understands that reports are private and confidential, so we make sure that patient privacy is upheld.</p>
                     </div>
                 </div>
 
@@ -58,7 +69,7 @@
                     <div class="text-center">
                         <span class="icon icon-basic-cards-diamonds"></span>
                         <h5>Convenient</h5>
-                        <h6>All inclusive</h6>
+                        <h6>All Inclusive</h6>
                         <p>Available on both Android and iOS mobile devices, making the referral process literally just a swipe away.</p>
                     </div>
                 </div>
@@ -643,7 +654,7 @@
                                 <img src="../../../../assets/img/clients/3.jpg" alt="">
                             </div>
                             <div class="cont">
-                                <h6>Ettu Afful</h6>
+                                <h6>Ettu Afful Acquah</h6>
                                 <span>Nurse</span>
                             </div>
                         </div>
@@ -668,7 +679,7 @@
             
             <div class="section-head offset-md-2 col-md-8 offset-lg-3 col-lg-6">
                 <h4>Payment <span>Info</span></h4>
-                <p>Reef App payment scheme summary <br> The amount paid to the user for lab referrals is 10 cedis per 100 cedis worth of labs done </p>
+                <p>Reef App payment scheme summary </p>
             </div>
 
             <div class="pricing-tables text-center full-width">
@@ -742,7 +753,7 @@
 
                             <div class="value">
                                 <h3><span>Gh&cent;</span>30</h3>
-                                <span class="per">/ Month</span>
+                                <span class="per">/ CT or Biopsy</span>
                             </div>
 
                             <!-- <div class="features">
