--- a/app/src/app/roles/doctor/history/history.page.html
+++ b/app/src/app/roles/doctor/history/history.page.html
@@ -10,29 +10,34 @@
 
 <ion-content class="ion-padding">
     <div *ngIf="connected">
-      <div *ngIf="!history"><h3 class="ion-text-center">No Referrals Made</h3></div>
-  
-      <span *ngIf="history">
-        <div class="card" *ngFor="let item of history">
-          <ion-row>
-            <ion-col size="2">
-              <span>{{item.day}}</span>
-              <span>{{item.month}}</span>
-              <span>{{item.year}}</span>
-            </ion-col>
-            <ion-col>
-              <span *ngIf="item.referral_patient_name">{{item.referral_patient_name}}</span>
-              <span *ngIf="item.referral_procedures">{{item.referral_procedures}}</span>
-              <span *ngIf="!item.referral_patient_name">Image Upload</span>
-              <span *ngIf="!item.referral_procedures">-</span>
-              <span *ngIf="item.referral_doctor_earned !== '0.00'">Earned: <span> Gh&cent; {{item.referral_doctor_earned}}</span></span>
-              <span *ngIf="item.referral_doctor_earned === '0.00'">Earned: <span>-</span></span>
-            </ion-col>
-            <ion-col size="1">
-              <ion-icon size="large" [name]="item.referral_status | referralstatusicon"></ion-icon>
-            </ion-col>
-          </ion-row>
-        </div>
+      <div *ngIf="!ready" class="card2">
+        <h4>Please Wait</h4>
+      </div>
+      <span *ngIf="ready">
+        <div *ngIf="!history"><h3 class="ion-text-center">No Referrals Made</h3></div>
+    
+        <span *ngIf="history">
+          <div class="card" *ngFor="let item of history">
+            <ion-row>
+              <ion-col size="2">
+                <span>{{item.day}}</span>
+                <span>{{item.month}}</span>
+                <span>{{item.year}}</span>
+              </ion-col>
+              <ion-col>
+                <span *ngIf="item.referral_patient_name">{{item.referral_patient_name}}</span>
+                <span *ngIf="item.referral_procedures">{{item.referral_procedures}}</span>
+                <span *ngIf="!item.referral_patient_name">Image Upload</span>
+                <span *ngIf="!item.referral_procedures">-</span>
+                <span *ngIf="item.referral_doctor_earned !== '0.00'">Earned: <span> Gh&cent; {{item.referral_doctor_earned}}</span></span>
+                <span *ngIf="item.referral_doctor_earned === '0.00'">Earned: <span>-</span></span>
+              </ion-col>
+              <ion-col size="1">
+                <ion-icon size="large" [name]="item.referral_status | referralstatusicon"></ion-icon>
+              </ion-col>
+            </ion-row>
+          </div>
+        </span>
       </span>
     </div>
     
